# ProjectGemini

./: .gitignore  README.md  flake.nix  index.html  license.txt  main.py  mypy.txt  out.prof  profile.prof  projectgemini.apk  pyproject.toml  requirements.txt  shell.nix  wrapped_run.sh
aseprite/: me.ase  tileset.ase
assets/: background.aseprite  bg-construction.ase  bg-mushroom.ase  captain.aseprite  credits.txt  death.aseprite  digifont.ase  drone.aseprite  faces.aseprite  font-black.ase  font.ase  ford.aseprite  gui.ase  heart.ase  hoverboard.ase  iball.ase  lava.ase  ldtk.ldtk  license.txt  liquid.ase  map-planet.aseprite  map-ship.aseprite  me.ase  mushrooms.ase  npcs.aseprite  palette-list.aseprite  palette.aseprite  people-concept.aseprite  piano.aseprite  placeholder-tiles.ase  platformer-sprites.ase  ship-inside.ase  ship.ase  spapple.aseprite  spikeberry.aseprite  stars.json  sunflowers.ase  switch.ase  tile.ase  tileset.ase  (+4 more)
cutscenes/: broken_ship.snek  death.snek  hoverboard.snek  level_begin.snek  level_exit.snek  level_switch.snek  psychedelic.snek  quit.snek  ship.snek
data/: backgrounds.json  biomes.json  gui.json  mushrooms.json  planets.json  settings-default.json  settings.json
gamelibs/: animation.py  easings.py  env.py  game_save.py  game_state.py  gui2d.py  hardware.py  hoverboarding.py  input_binding.py  interfaces.py  level.py  loader.py  menu.py  particles.py  pixelfont.py  projectile.py  scripting.py  snekgemini.py  sound.py  sprite.py  timer.py  util_draw.py  visual_fx.py  window.py
scripts/: animation.py  easings.py  effect.py  env.py  (+22 more)
(+158 files in other folders)
