[project]
name = "projectgemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "pygame-ce>=2.5.5",
    "snek2",
    "zengl>=2.7.1",
]

[tool.uv.sources]
snek2 = { git = "https://github.com/JiffyRob/SNEK2.git", rev = "main" }
